# Guengo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Untitled  nixpacks.toml  package-lock.json  package.json  railway.toml  vercel.json
api/: [...path].ts  index.ts
api/_lib/: env.ts  focus-topics.ts  gemini.ts  http.ts  opening.ts  router.ts  stripe.ts  tutor.ts
backend/: Cargo.toml
backend/data/: session_focus_topics.json
backend/src/: chat_stream.rs  focus_topics.rs  main.rs  opening_audio.rs  providers.rs  stripe.rs  tts.rs  tutor.rs
frontend/: esbuild.config.mjs  package.json  tsconfig.json
frontend/public/: index.html  styles.css
frontend/src/: App.tsx  index.tsx  router.ts
frontend/src/api/: config.ts  geminiLive.ts
frontend/src/auth/: AuthProvider.tsx
frontend/src/components/: AppOnboardingGate.tsx  LoggedInAppOnlyGuard.tsx  MicLevelMeter.tsx  ProtectedAppRoute.tsx  SessionChat.tsx  UserMenuDropdown.tsx
frontend/src/data/: curriculum.ts  onboardingLifeImpactQuestions.ts  onboardingQuestions.ts
frontend/src/lib/: audioUnlock.ts  authRouting.ts  authSignOut.ts  displayText.ts  googleAuth.ts  openingsStatic.ts  pcmStream.ts  profileGate.ts  sessionLog.ts  stripeBillingPortal.ts  stripeCheckout.ts  subtitleDebug.ts  supabaseOAuthHydrate.ts
frontend/src/pages/: AppPage.tsx  LandingPage.tsx  PaywallPage.tsx
scripts/: ensure-cargo.mjs  kill-stale-api.mjs  warm-opening-audio.mjs
supabase/migrations/: 20260526120000_profiles_auth_sync.sql  20260527100000_profiles_onboarding.sql  20260528120000_profiles_stripe_premium.sql
(+8 files in other folders)
